# coding-test-testbed

./: .gitignore  .pre-commit-config.yaml  PROBLEM_TYPE.md  README.md  pyproject.toml  pytest.ini  ruff.toml
.cursor/: mode.json
.cursor/commands/: generate_problems.md
data/: README.md
data/dynamic_programming/: climbing_stairs.parquet  climbing_stairs.sha  coin_change.parquet  coin_change.sha  edit_distance.parquet  edit_distance.sha  house_robber.parquet  house_robber.sha  longest_increasing_subsequence.parquet  longest_increasing_subsequence.sha
data/graph_algorithms/: course_schedule.parquet  course_schedule.sha  detect_cycle_undirected.parquet  detect_cycle_undirected.sha  minimum_spanning_tree.parquet  minimum_spanning_tree.sha  number_of_islands.parquet  number_of_islands.sha  shortest_path_dijkstra.parquet  shortest_path_dijkstra.sha
data/greedy_algorithms/: activity_selection.parquet  activity_selection.sha  fractional_knapsack.parquet  fractional_knapsack.sha  huffman_coding.parquet  huffman_coding.sha  job_sequencing_with_deadlines.parquet  job_sequencing_with_deadlines.sha  minimum_number_of_coins.parquet  minimum_number_of_coins.sha
data/hashing_and_data_structures/: group_anagrams.parquet  group_anagrams.sha  lfu_cache.parquet  lfu_cache.sha  longest_substring.parquet  longest_substring.sha  subarray_sum_equal.sha  subarray_sum_equal_k.parquet  two_sum.parquet  two_sum.sha
data/sorting_searching/: kth_largest_element.parquet  kth_largest_element.sha  (+2 more)
src/: __init__.py  cli.py  conftest.py  pytest_plugins.py  settings.py
src/utils/: runner.py  (+3 more)
(+92 files in other folders)
